welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:2: error: Missing closing brace `}' assumed here
for (j<-1 to 5 ){
^Poucet:4: error: ';' expected but '=' found.
	nbBiscuit:Int=0;
                     ^